# chirp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  tsconfig.main.json
.github/workflows/: ci.yml  release.yml
Formula/: chirp.rb
resources/: icon.icns
scripts/: generate-icons.js
src/: app.rs  daemon.rs  db.rs  import.rs  main.rs  parser.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/main/: database.ts  index.ts  preload.ts  reminder-engine.ts
src/renderer/: App.tsx  index.html
src/renderer/components/: CommandPalette.tsx  ListReminderSettings.tsx  ListSelector.tsx  SettingsPanel.tsx  TaskItem.tsx  TitleBar.tsx
src/renderer/hooks/: useFuzzySearch.ts  useKeyboard.ts
src/renderer/lib/: parser.ts  store.ts  tauri-api.ts
src/renderer/styles/: index.css
src/renderer/types/: api.d.ts
src/shared/: types.ts
