[package]
name = "chirp-tui"
version = "0.3.1"
edition = "2021"
description = "Minimalist task manager and ping reminder for the terminal"
license = "MIT"
repository = "https://github.com/Chessing234/chirp"
readme = "README.md"
keywords = ["task", "tui", "terminal", "todo", "reminder"]
categories = ["command-line-utilities"]

[[bin]]
name = "chirp"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"
fuzzy-matcher = "0.3"
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
opt-level = "z"
